Fix overflowing downloads not hiding in RTL.

Bug: 767225
Change-Id: I868ef5359287220d928249bf34d1b62f8a83e8d5
Reviewed-on: https://chromium-review.googlesource.com/720116
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509052}
Former-commit-id: 795953812c14480c171b7dfade1fc8acb33eaa78